--- a/index.css
+++ b/index.css
@@ -18,8 +18,6 @@ grid-gap: 5px;
 }
 
 .bigItem {
-  grid-row-start: 2;
-  grid-row-end: 4;
-  grid-column-start: 2;
-  grid-column-end: 4;
+  grid-area: 2 / 2 / 4 / 4;
+
 }
